# easter-run

./: .gitignore  README.md  build_and_push_er_server_docker_image.sh  client.js  debug.html  deploy.sh  deployment.jinja  index.html  main.tf  update_base_url_of_client.sh  update_url.sh  variables.tf
.github/workflows/: deploy_client.yaml  test_client.yaml  test_server.yaml
er-client/: LICENSE  README.md  client.js  debug.html  debug.js  device.html  gpx_to_ts.py  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
er-client/src/: App.vue  main.ts  orientation.ts  scenarios.ts  state.ts  track.test.ts  track.ts
er-client/src/assets/: styles.css
er-client/src/components/: CapturedModal.vue  ChargeBar.vue  CompassDevice.spec.ts  CompassDevice.vue  DebugModal.vue  HelpModal.vue  PermissionModal.vue  SignalStrengthBar.vue
er-client/src/stores/: charge.ts
er-server/: Cargo.toml  Dockerfile
er-server/src/: main.rs  track.rs
src/: track.test.ts  track.ts
