[package]
name = "er-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "er-server"
path = "src/main.rs"

[dependencies]
axum = "0.7.4"
geo = "0.28.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36.0",  features = ["full"] }
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1.0"
chrono = "0.4.34"
